# distrijs

./: .eslintignore  .eslintrc.js  .gitignore  A2A_CHAT_PROCESSING_SOLUTION.md  CHAT_ENHANCEMENTS.md  CLAUDE.md  COMMIT_READY.md  DEBUG_SUMMARY.md  DEBUG_USAGE_EXAMPLE.md  DEPLOYMENT_GUIDE.md  EXTERNAL_TOOLS_GUIDE.md  FIXED_STREAM_PROCESSING.md  FIXES_SUMMARY.md  FULL_DEMO_COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Inteaction Design.md  README.md  REFACTORING_SUMMARY.md  RELEASE_SETUP_CHECKLIST.md  RELEASE_WORKFLOW.md  SDK_BUILD_SUMMARY.md  STREAM_PROCESSING_SOLUTION.md  TASK_COMPLETION_SUMMARY.md  VOICE_SUPPORT.md  agents.md  messages.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.sh  test-event-processing.js  test-message-debug.js  test-multitask-integration.js  test-plan-formatting.js  test-react-store.js  test-real-stream.js  test_artifacts.js  test_plan_rendering.js  tsconfig.json  turbo.json
.claude/commands/: integration-test.md
.github/workflows/: deploy-demo.yml  publish.yml  release.yml
.turbo/daemon/: c52ddf65534b7b46-turbo.log.2025-06-30
apps/angular-demo/: package.json
apps/botfleet-ui/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/browsr/: README.md  index.html  package.json  tailwind.config.js  (+2 more)
apps/ui/src-tauri/: Cargo.toml
docs/: a2a-client-migration.md  task-streaming.md
fixtures/: a2a_messages.json  distr_messages.json  messages.json  stream.json  test_plan.json
integration/: .env.example  README.md  package.json  vitest.config.ts
scripts/: build-copy.js
(+307 files in other folders)
