[package]
name = "distri-ui-tauri"
version = "0.1.0"
description = "Distri UI Desktop App"
authors = ["Distri Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.4", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
